<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_segundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jegg.reforest.IniciarSesionActivity"
    android:background="@color/fondo_pantalla"
    >

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/linear_layout_fondo"
        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/width_logo"
            android:layout_height="@dimen/height_logo"
            android:background="@drawable/arbolj"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margintop_logo"
            android:layout_gravity="center"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tvCorreo"
                android:layout_width="@dimen/width_contraseña"
                android:layout_height="wrap_content"
                android:textSize="@dimen/width_correo"
                android:hint="@string/correo"
                android:textColor="@color/color_de_correo"
                android:background="@drawable/cuadrado2"
                android:layout_marginTop="@dimen/margintop_correo"
                android:layout_below="@id/imgLogo"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tvContraseña"
                android:layout_width="@dimen/width_contraseña"
                android:layout_height="wrap_content"
                android:textSize="@dimen/width_correo"
                android:hint="@string/contraseña"
                android:textColor="@color/color_de_contraseña"
                android:background="@drawable/cuadrado2"
                android:layout_marginTop="@dimen/margintop_contraseña"
                android:layout_below="@id/tvCorreo"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/btn_marginbottom"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_entrar"
            android:textStyle="bold"
            android:textSize="@dimen/btn_text_entrar"
            android:textColor="@color/btn_letra_entrar"
            android:background="@drawable/cuadrado"
            android:onClick=""
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            />
       <!-- se cambio-->
        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_registro"
            android:textStyle="bold"
            android:textSize="@dimen/btn_text_entrar"
            android:textColor="@color/btn_letra_registro"
            android:background="@drawable/cuadrado"
            android:onClick="irRegistro"
            android:layout_gravity="center"
            />

    </LinearLayout>

</RelativeLayout>
